# sphinx-plausible

./: README.md  pyproject.toml
.github/workflows/: test.yml
sphinx_plausible/: __init__.py
tests/: test.sh
tests/site-1/source/: conf.py  index.rst
