[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx_plausible"
authors = [{name = "Richard Darst"}]
readme = "README.md"
#license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    # 1.8: app.add_javascript rename
    # 4.4: loading_method
    "sphinx>1.8",
]

[project.optional-dependencies]
test = [
  "sphinx>1.8",
]

[project.urls]
Home = "https://github.com/rkdarst/sphinx-plausible/"
