[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sphinx-plausible"
authors = [{name = "Richard Darst"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Framework :: Sphinx",
    "Framework :: Sphinx :: Extension",
    ]
dynamic = ["version", "description"]
requires-python = ">=3"
dependencies = [
    # 1.8: app.add_javascript rename
    # 4.4: loading_method='defer' (not used)
    "sphinx>1.8",
]

[tool.flit.module]
name = "sphinx_plausible"

[project.optional-dependencies]
test = [
  "sphinx>1.8",
]

[project.urls]
Home = "https://github.com/rkdarst/sphinx-plausible/"
